--- a/src/Css/Contacto.css
+++ b/src/Css/Contacto.css
@@ -38,6 +38,35 @@
 
 }
 
+.redes-principal {
+    display: flex; /* Flexbox */
+    list-style: none; /* Eliminar los puntos de lista */
+    padding: 0;
+}
+
+.redes-principal .lis {
+    margin: 0 10px; /* Espacio entre los íconos */
+    font-size: 20px;
+    color: #5CF2F2;
+    border: 1px solid #5CF2F2;
+    padding: 10px;
+    border-radius: 50%;
+    transition: all 1s ease;
+    
+}
+
+.redes-principal .lis:hover {
+  margin: 0 10px; /* Espacio entre los íconos */
+  font-size: 20px;
+  color: #0a101e;
+  border: 1px solid #5CF2F2;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #5CF2F2;
+  box-shadow: 0px 1px 4px #5CF2F2;
+}
+
+
 @media only screen and (max-width: 768px) {
     .contacto h2{
         font-size: 26px;
@@ -45,3 +74,4 @@
     }
 
 }
+
